--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,7 +42,7 @@
 						        <div class="formcontainer">						        
 						        
 							        <div ng-controller="UploadFileController">
-							        	<div style="border:0px solid #ccc;padding: 5px;">
+							        	<div class="text-center" style="border:0px solid #ccc;padding: 5px; color:red;">
 								            <span ng-bind="uploadResult"></span>
 								         </div>
 								         
