--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -127,7 +127,7 @@
 						        
 							        <div ng-controller="GetFilesController">
 								         <button type="button" ng-click="getAllFiles()" class="btn btn-primary btn-sm" >Show User</button>
-								         
+								         <span>  Click 'Photo' column to download user image. </span>
 								         <div class="table-responsive">
 								         	<table class="table table-hover">
 								         		<thead>
