--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -7,8 +7,8 @@ body, .form-control{
 	font-size:12px!important;
 }
 
-.floatRight{
-	float:right;
+.floatleft{
+	float:left;
 	margin-right: 18px;
 }
 
